<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SettingsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstNameTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/prenom"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="12"
                android:layout_margin="5dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastNameTitle"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/nom"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:ems="12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="150dp"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="@string/email"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:ems="12" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/address"
            android:textSize="20sp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cityTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/city"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="12"
                android:textSize="20sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/postalCodeTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/postalCode"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="4"
                android:textSize="20sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/streetTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/street"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/streetEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="12"
                android:textSize="20sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/streetCodeTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/streetCode"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/streetCodeEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="4"
                android:textSize="20sp"
                android:layout_margin="5dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/countryTitle"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="40dp"
                android:text="@string/country"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/countryEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="12"
                android:textSize="20sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/validateButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="30dp"
       android:src="@drawable/ic_baseline_check_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>