<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">
    <LinearLayout
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="26dp">
        <Button
            android:id="@+id/LightFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/Light" />
        <Button
            android:id="@+id/RollerShutterFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RollerShutter"
            android:layout_marginStart="2dp" />
        <Button
            android:id="@+id/HeaterFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Heater"
            android:layout_marginStart="2dp" />

        <Button
            android:id="@+id/OkFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:textColor="@color/white"
            android:layout_marginStart="2dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:layout_constraintDimensionRatio="1:1"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
    android:paddingTop="26dp"
    android:paddingBottom="25dp"
    android:id="@+id/MainRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/filters">



</androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>